src/objects/CH_USER_Profile__c.object
<CustomObject>
    <description>Companies House current user profile for verification purposes</description>
    <fields>
        <fullName>chprofileid__c</fullName>
        <label>chprofileid</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>company_found__c</fullName>
        <label>company_found</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companysearched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>companysearched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>forename__c</fullName>
        <label>forename</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>profileconfirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>profileconfirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>surname__c</fullName>
        <label>surname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transactioncompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>transactioncompleted</label>
        <type>Checkbox</type>
    </fields>
    <label>CH User Profile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CHProfile-{000000}</displayFormat>
        <label>CH_USER_Profile__C Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CH User Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>